--- a/src/index.css
+++ b/src/index.css
@@ -110,3 +110,25 @@ meter {
 :where(dialog:modal) {
     all: revert;
 }
+
+/* Styling scroll bar */
+
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
